Test/module/inconsistent_abbrev.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling Test.module.inconsistent_abbrev ( Test/module/inconsistent_abbrev.hol, interpreted )
5:1: error: [HolBETA2-ModuleError]
   |                                 
 5 | import Test.module.inc_abbrev_b.
   | ^                               
Import inconsistency (C3): `pair' is declared by both `Test.module.inc_abbrev_a' and `Test.module.inc_abbrev_b' with disagreeing abbreviation. (`Test.module.inc_abbrev_a': <prior body>; `Test.module.inc_abbrev_b': <current body>.)

Hol =<< Hol >>= quit
